test/fail/const-var-field.as
let o : {x : Nat} = new {var x = 0};
